euxis_add_library(euxis-gateway-cpp
  SOURCES
    src/gateway_main.cpp
    src/config.cpp
    src/state.cpp
    src/auth.cpp
    src/server.cpp
    src/routes_health.cpp
    src/routes_sessions.cpp
    src/routes_webhooks.cpp
    src/routes_admin.cpp
    src/mcp.cpp
    src/mcp_fleet_tools.cpp
    src/mcp_stdio.cpp
    src/routes_mcp.cpp
    src/websocket.cpp
  DEPS
    euxis-security-cpp
    euxis-core-cpp
    euxis-crypto-cpp
    euxis-adapters-cpp
    euxis-metrics-cpp
    httplib::httplib
    ixwebsocket::ixwebsocket
    unofficial-sodium::sodium
    nlohmann_json::nlohmann_json
    spdlog::spdlog
  TEST_SOURCES
    tests/test_main_entry.cpp
    tests/test_config.cpp
    tests/test_auth.cpp
    tests/test_server.cpp
    tests/test_routes.cpp
    tests/test_mcp.cpp
    tests/test_mcp_fleet_tools.cpp
    tests/test_mcp_resources.cpp
    tests/test_websocket.cpp
    tests/test_state.cpp
)

add_executable(euxis-gateway src/main.cpp)
target_link_libraries(euxis-gateway PRIVATE euxis-gateway-cpp)
