[package]
name = "euxis-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for building Euxis Wasm agents"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["rlib"]

[dependencies]
extism-pdk = "1.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
rmp-serde = "1.3"
thiserror = "2"
